--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="stylesheet" href="./assets/fonts/BOSQUE.otf"> -->
-  <!-- <link rel="stylesheet" href="./assets/fonts/BOSQUE.ttf"> -->
+  <link rel="stylesheet" href="./assets/fonts/BOSQUE.otf">
+  <link rel="stylesheet" href="./assets/fonts/BOSQUE.ttf">
 </head>
 <body>
   <app-root></app-root>
